# beauty-slot-bot

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  deploy.sh  docker-compose.yml  entrypoint.sh  k.py  main.py  pyproject.toml  requirements.txt  test_file.py  user_data.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 12f14f8cef2f_upda_new_field_user_id.py  1e4c453220b7_add_new_field_user_id.py  7ffae9dd75c6_change_type_column_type_in_notes.py  94f4f7dedeab_added_cascading_deletion_to_notes.py  9b9e2ce0b01e_change_type_clumn.py  9fc51ec53bae_added_a_new_table.py  a9f695071c0e_added_reminder_hours_field_to_notes.py  ae0b300ca21d_added_column_restrictions_and_changed.py  b091597e4bb7_change_type_column_type_in_notes.py
bot/: __init__.py  handlers.py  keyboards.py  middleware.py
bot/admin/: middleware.py  states.py
bot/keyboards/: keyboards.py
cache/: base.py  cache.py  config.py
db/: commands.py  config.py  crud.py  db_reader.py  db_writer.py  interfaces.py  models.py  queries.py  repository.py
decorators/: adding_user_data.py  cache_tools.py  check_user_data.py  permissions.py  validation.py
migrations/: env.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: deploy.sh  entrypoint.sh  start_celery.sh
src/: main.py  main_container.py
src/bot/: router.py  (+1 more)
tests/: test_admin_handlers.py  test_db.py  test_paginator.py  test_time_finder.py  test_time_processing.py
utils/: booking_reminders.py  db.py  format_datetime.py  formatted_view.py  message_sender.py  message_templates.py  time_processing.py  utils.py
(+206 files in other folders)
